<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.palprotech.eduappteacher"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.palprotech.eduappteacher.customview.CircleImageView
        android:id="@+id/image_institute_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_pic"
        app:layout_collapseMode="parallax" />

    <TextView
        android:id="@+id/txtInstituteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/textcolorborder"
        android:hint="@string/user_name"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:textColor="#67368c"
        android:textColorHint="#7767368c" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/textcolorborder"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="#67368c"
        android:textColorHint="#7767368c" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/round_btn"
        android:text="@string/sign_in"
        android:textColor="@color/appColor" />

</LinearLayout>