<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:background="@color/appColor">

        <com.palprotech.eduappteacher.customview.CircleImageView
            android:id="@+id/image_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="Kamal Raj"
            android:textColorHint="@color/white"
            android:layout_below="@+id/image_profile_pic"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/staff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:hint="Professor"
            android:textColorHint="@color/white"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:textColor="@color/appColor"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/username"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password" />


        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:textColor="@color/appColor"/>

        <EditText
            android:layout_below="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="Password"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:layout_marginTop="85dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:textColor="@color/appColor"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="abc@xyz.com"
            android:layout_below="@+id/mail"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginTop="215dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:textColor="@color/appColor"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/phone"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:textColor="@color/appColor"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/address"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password" />



    </RelativeLayout>

    </LinearLayout>

</ScrollView>